assets/css/custom.css
/*

*/
@import url('../font-awesome/css/font-awesome.min.css');


h4 {
	font-family: 'raleway-medium';
}
body {
	font-family: 'OpenSansCondensed', sans-serif;
	background-color: #eeeeee;
}
body p {
	font-family: 'lato-light';
}
@font-face {
	font-family: 'OpenSansCondensed';
	src: url(../fonts/OpenSans-Light.ttf);
}
@font-face {
	font-family: 'OpenSans';
	src: url(../fonts/OpenSans-Light.ttf);
}
@font-face {
	font-family: 'lato-light';
	src: url(../fonts/lato_light.ttf);
}
@font-face {
	font-family: 'aleo-bold';
	src: url(../fonts/aleo_bold.otf);
}
@font-face {
	font-family: 'raleway-medium';
	src: url(../fonts/raleway_medium.ttf);
}
#home-page {
	background-color: #FFFFFF;
}
.navbar {
	border-radius: 0px;
	background-color: #FFFFFF;
	margin-bottom: 0px;
	border: none;
	z-index: 10000;
}

.navbar-collapse a {
	background-color: #FFF;
}
#collapsable-nav a:hover {
	background-color: #eeeeee;
}
.navbar-nav > li > a {
	padding-top: 40px;
	padding-bottom: 40px;
	color: #000000;
}
.nav-top {
	width: 100%;
	color: #FFFFFF;
}
.nav-top span {
    display: inline-block;
    padding: 4px 10px;
    font-size: 12px;
}
.navbar-toggle {
	margin-top: 32px;
}
.navbar-toggle .icon-bar {
	background-color: #000;
}
#home-page .nav-top {
	background-color: #34aca0;
}
.what-we-do-body .nav-top {
	background-color: #00a652;
}
.wwa-body .nav-top {
	background-color: #f4a74b;
}
.wwb-body .nav-top {
	background-color: #20665e;
}
.offering-body .nav-top {
	background-color: #34aca0;
}
.features-body .nav-top {
	background-color: #00a9c8;
}
.contact-body .nav-top {
	background-color: #34aca0;
}
.navbar-brand img {
	width: auto;
	height: 72px;
}
.nav-inner {
	height: 100px;
}
.navbar-fixed-top .nav-inner {
	height: 74px;
}
.navbar-fixed-top .navbar-brand img {
	height: 50px;
}
.navbar-fixed-top li a {
	padding-top: 27px;
	padding-bottom: 27px;
}
.navbar-fixed-top .navbar-nav {
	margin-top: 0px;
}
.navbar-fixed-top .navbar-collapse {
	padding-top: 0px;
	max-height: 530px;
}
#home-page .home-nav a, .what-we-do-body .what-we-do-nav a, .wwa-body .wwa-nav a, .wwb-body .wwb-nav a, .offering-body .offering-nav a, .features-body .features-nav a, .contact-body .contact-nav a {
	color: #FFFFFF;
}
#home-page .home-nav a {
	background-color: #34aca0;
}
.what-we-do-body .what-we-do-nav a {
	background-color: #00a652;
}
.wwa-body .wwa-nav a {
	background-color: #f4a74b;
}
.wwb-body .wwb-nav a {
	background-color: #20665e;
}
.offering-body .offering-nav a {
	background-color: #34aca0;
}
.features-body .features-nav a {
	background-color: #00a9c8;
}
.contact-body .contact-nav a {
	background-color: #34aca0;
}

/*--------------------------- Heading and Fancy line ---------------------------*/

hr.fancy-line {
    border: 0;
    height: 1px;

}
hr.fancy-line:before {
    top: -0.5em;
    height: 1em;
}
hr.fancy-line:after {
    content:'';
    height: 0.5em;
    top: 1px;
}
hr.fancy-line:before, hr.fancy-line:after {
    content: '';
    position: absolute;
	width: 100%
}
hr.fancy-line:after {
    background: rgba(0,0,0,0);
}
.special-p hr.fancy-line:before,.special-p  hr.fancy-line:after {
	width: 0%;
}
.special-p hr.fancy-line, .special-p hr.fancy-line:before {
	background: rgba(52, 172, 160, 0) radial-gradient(ellipse at center center , rgba(255, 255, 255, 0.8) 0%, rgba(52, 172, 160, 0) 16%) repeat scroll 0% 0%;
}
.what-we-do-body hr.fancy-line, .what-we-do-body hr.fancy-line:before {
	background: rgba(52, 172, 160, 0) radial-gradient(ellipse at center center , rgba(0, 166, 82, 0.8) 0%, rgba(52, 172, 160, 0) 16%) repeat scroll 0% 0%;
}
.wwa-body hr.fancy-line, .wwa-body hr.fancy-line:before {
	background: rgba(52, 172, 160, 0) radial-gradient(ellipse at center center , rgba(244, 167, 75, 0.8) 0%, rgba(52, 172, 160, 0) 16%) repeat scroll 0% 0%;
}
.wwb-body hr.fancy-line, .wwb-body hr.fancy-line:before {
	background: rgba(52, 172, 160, 0) radial-gradient(ellipse at center center , rgba(32, 102, 94, 0.8) 0%, rgba(52, 172, 160, 0) 16%) repeat scroll 0% 0%;
}
.offering-body hr.fancy-line, .offering-body hr.fancy-line:before {
	background: rgba(52, 172, 160, 0) radial-gradient(ellipse at center center , rgba(52, 172, 160, 0.8) 0%, rgba(52, 172, 160, 0) 16%) repeat scroll 0% 0%;
}
.features-body hr.fancy-line, .features-body hr.fancy-line:before {
	background: rgba(52, 172, 160, 0) radial-gradient(ellipse at center center , rgba(0, 169, 200, 0.8) 0%, rgba(52, 172, 160, 0) 16%) repeat scroll 0% 0%;
}
.contact-body hr.fancy-line, .contact-body hr.fancy-line:before {
	background: rgba(52, 172, 160, 0) radial-gradient(ellipse at center center , rgba(52, 172, 160, 0.8) 0%, rgba(52, 172, 160, 0) 16%) repeat scroll 0% 0%;
}
.special-p h2 {
	color: #FFF;
}
.what-we-do-body h2{
	color: #00a652;
}
.wwa-body h2 {
	color: #f4a74b;
}
.wwb-body h2 {
	color: #20665e;
}
.offering-body h2 {
	color: #34aca0;
}
.features-body h2 {
	color: #00a9c8;
}
.contact-body h2 {
	color: #34aca0;
}

/*--------------------------- Common Among all pages ---------------------------*/

a:hover {
	text-decoration: none;
}

h2 {
	text-align: center;
	font-weight: bold;
}
.banner {
	width: 100%;
	height: 300px;
	background-repeat: no-repeat;
	background-size: 100%;
	background-position: center;
	position: relative;
	font-family: 'lato-light';
}
.banner-word {
	position: absolute;
	width: 60%;
	text-align: center;
	top: 106px;
	font-size: 30px;
	color: rgb(255, 255, 255);

	margin-left: 20%;
	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
}
.container {
	max-width: 1200px;
}

.container li {
	padding: 4px 18px;
}

.container p {
	margin: 12px 0px 12px 0px;
}

.heading-container {
	margin-bottom: 38px;
	margin-top: 40px;
	font-family: 'aleo-bold';
}

ul, ol {
	margin-bottom: 20px;
}
.btn-consilium-o-green {
	color: #00A652;
	background-color: rgba(0,0,0,0);
	border: 1px solid #00A652;
}
.btn-consilium-o-blue {
	color: #00A9C8;
	background-color: rgba(0,0,0,0);
	border: 1px solid #00A9C8;
}
.btn-consilium-round {
	color: #FFF;
	background-color: #34ACA0;
	padding: 6px 30px;
}
.btn-consilium-o {
	color: #FFF;
	background-color: rgba(0,0,0,0);
	border: 1px solid #fff;
}
.btn-consilium-pointy {
	color: #FFF;
	background-color: #00a652;
	padding: 6px 30px;
	border-radius: 0px;
}
.btn-consilium-pointy:focus {
	color: #FFF;
}
.btn:hover {
	background-color: #eeeeee;
	border: 1px solid #B4B4B4;
}
.special-p {
	width: 100%;
	background-color: rgb(1, 166, 136);
	color: rgb(255, 255, 255);
	padding: 40px 16px 66px;
}
.special-p p {
	max-width: 1200px;
	margin: 0px auto;
}
/*--------------------------- Banners ---------------------------*/

.wwb-body .banner {
	background-image: url(../img/slider-images/image10.jpg);
	background-position: center 0;
}
.what-we-do-body .banner {
	background-image: url(../img/slider-images/image8.jpg);
	background-position: center 18%;
}
.wwa-body .banner {
	background-image: url(../img/slider-images/image9.jpg);
	background-position: center 12%;
}
.offering-body .banner {
	background-image: url(../img/slider-images/image7.jpg);
	background-position: center 37%;
}

/*--------------------------- Footer ---------------------------*/

footer {
	background-color: #34aca0;
	background-image: url(../img/footer-back.png);
	background-size: 20px;
	margin-top: 30px;
}
footer h3 {
	color: #FFF;
}
footer a {
	color: #FFFFFF;
}
footer ul {
	list-style-type: none;
	padding-left: 0;
}
footer ul li {
	display: inline-block;
}
.related-links {
	padding-left: 0;
}
.related-links li {
	margin: 10px 11px;
}
.connect-links li{
	margin: 0 7px;
}
.connect-container {
	display: inline-block;
	/* padding: 6px; */
	position: relative;
	vertical-align: top;
	border-radius: 28px;
	border: 1px solid #FFF;
	width: 34px;
	height: 34px;
}
.connect-container a{
	position: absolute;
	top: 6px;
	left: 10px;
}
.connect {
	width: 20px;
}
#extra-links li {
	padding: 0 10px;
}
/*--------------------------- Panel ---------------------------*/

.panel-default > .panel-heading {
	/*background-color: #414141;*/
	color: #FFF;
	cursor: pointer;
	border-radius: 0px;
	-webkit-transition-duration: 0.4s;
  	-moz-transition-duration: 0.4s;
	-o-transition-duration: 0.4s;
	transition-duration: 0.4s;
}
.panel-default > .panel-heading a:hover {
	color: #ddd;
}
.panel-title {
	font-size: 16px;
}
.panel-group .panel {
	border-radius: 0px;
}
.panel-content {
	width: 80%;
    margin-left: 15px;
    text-align: left;
    display: inline-block;
    vertical-align: top;
}
.panel-image {
	display: inline-block;
	vertical-align: top;
	padding-top: 17px;
}
.panel-image img {
	width: 200px;
}
.panel-default:nth-child(5n+1) > .panel-heading{
	background-color: #34ad77;
}
.panel-default:nth-child(5n+2) > .panel-heading{
	background-color: #34adb0;
}
.panel-default:nth-child(5n+3) > .panel-heading{
	background-color: #ed6a63;
}
.panel-default:nth-child(5n+4) > .panel-heading{
	background-color: #00a687;
}
.panel-default:nth-child(5n+5) > .panel-heading{
	background-color: #605cc6;
}

/*--------------------------- Firm Tiles ---------------------------*/

.firm-tiles {
	height: 200px;
	display: inline-block;
	width: 24%;
	border-right: 1px solid rgb(221, 221, 221);
	vertical-align: top;
	padding: 0 20px;
}
.firm-tiles-container {
	padding: 16px 0px;
	background-color: #EEE;
	margin-top: 42px;
}
.firm-tiles-container ul {
	padding-left: 0px;
	list-style-type: none;
	margin-bottom: 0px;
}
.firm-tiles .firm-img-container {
	height: 100px;
	margin-top: 20px;
	margin-bottom: 10px;
	display: table;
}
.firm-tiles .firm-img-container div {
	height: 100%;
	display: table-cell;
	vertical-align: middle;
}
.firm-tiles img {
	max-height: 90px;
	max-width: 95%;
}

